--- a/Backend/bookwed/src/main/resources/application.properties
+++ b/Backend/bookwed/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #db config for deployment on server
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:book}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:wed-book}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:}
