--- a/frontend/Ecommer-app/package.json
+++ b/frontend/Ecommer-app/package.json
@@ -21,7 +21,9 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
