--- a/frontend/Ecommer-app/.hintrc
+++ b/frontend/Ecommer-app/.hintrc
@@ -18,6 +18,12 @@
       {
         "label": "off"
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   }
 }
