--- a/frontend/Ecommer-app/package.json
+++ b/frontend/Ecommer-app/package.json
@@ -18,12 +18,18 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "axios": "^1.7.9",
+    "@mui/material": "^6.4.6",
+    "@shadcn/ui": "^0.0.4",
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-pagination": "^6.0.3",
+    "react-hook": "^0.0.1",
+    "react-hook-form": "^7.54.2",
+    "Router": "^2.1.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.17.2",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
